# bday

./: .gitignore  README.md  main.tf  pyproject.toml
src/bday/: cli.py  db.py  models.py  util.py
