[tool.poetry]
name = "bday"
version = "0.1.0"
description = ""
authors = ["mapsam <matthews.sam@gmail.com>"]
readme = "README.md"
packages = [
  { include = "bday", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
boto3 = "^1.35.41"
click = "^8.1.7"
pydantic = "^2.9.2"
nanoid = "^2.0.0"

[tool.poetry.scripts]
bday = "bday.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

